# pyMethTools

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
pyMethTools/: FitCpG.py  FitRegion.py  __init__.py  bbseq.py  comethyl.py  fit.py  fit_cpg.py  pyMethObj.py  type_annotations.py
pyMethTools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyMethTools/.ipynb_checkpoints/: fit_cpg-checkpoint.py  pyMethObj-checkpoint.py  sim-checkpoint.py
tests/: test_bbseq.py  test_fit.py  test_pyMeth.py  test_pyMethObj.py  test_sim.py
tests/.ipynb_checkpoints/: test_cometh-checkpoint.py  test_pyMeth-checkpoint.py
tests/test_data/: template_X.csv  template_X_star.csv  template_coverage.csv  template_coverage_diff.csv  template_fits.csv  template_meth.csv  template_meth_diff.csv  template_regions.csv
vignettes/: vignette.ipynb
vignettes/.ipynb_checkpoints/: vignette-checkpoint.ipynb
