[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMethTools"
version = "0.3.0"
description = "A Python package for analysis of targetted methylation data"
readme = "README.md"
authors = [
    {name = "Andy Graham", email = "andygraham7162@gmail.com"}
]
license = {text = "BSD 2-clause"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "aiosignal>=1,<2",
    "anyio>=3,<4",
    "appnope>=0,<1",
    "archspec>=0,<1",
    "argon2-cffi>=21,<22",
    "argon2-cffi-bindings>=21,<22",
    "arrow>=1,<2",
    "asttokens>=2,<3",
    "async-lru>=1,<2",
    "attrs>=23,<24",
    "Babel>=2,<3",
    "beautifulsoup4>=4,<5",
    "bleach>=6,<7",
    "boltons>=23,<24",
    "Brotli>=1,<2",
    "cached-property>=1,<2",
    "certifi>=2023,<2024",
    "cffi>=1,<2",
    "charset-normalizer>=3,<4",
    "click>=8,<9",
    "colorama>=0,<1",
    "comm>=0,<1",
    "contourpy>=1,<2",
    "cycler>=0,<1",
    "debugpy>=1,<2",
    "decorator>=5,<6",
    "defusedxml>=0,<1",
    "distro>=1,<2",
    "entrypoints>=0,<1",
    "exceptiongroup>=1,<2",
    "executing>=1,<2",
    "fastjsonschema>=2,<3",
    "filelock>=3,<4",
    "fonttools>=4,<5",
    "fqdn>=1,<2",
    "frozendict>=2,<3",
    "frozenlist>=1,<2",
    "h11>=0,<1",
    "h2>=4,<5",
    "hpack>=4,<5",
    "hmmlearn>=0,<1",
    "httpcore>=0,<1",
    "httpx>=0,<1",
    "hyperframe>=6,<7",
    "idna>=3,<4",
    "importlib_metadata>=6,<7",
    "importlib_resources>=6,<7",
    "iniconfig>=2,<3",
    "ipykernel>=6,<7",
    "ipython>=8,<9",
    "ipywidgets>=8,<9",
    "isoduration>=20,<21",
    "jedi>=0,<1",
    "Jinja2>=3,<4",
    "json5>=0,<1",
    "jsonpatch>=1,<2",
    "jsonpointer>=2,<3",
    "jsonschema>=4,<5",
    "jsonschema-specifications>=2023,<2024",
    "jupyter-events>=0,<1",
    "jupyter-lsp",
    "jupyter_client>=8,<9",
    "jupyter_core>=5,<6",
    "jupyter_server>=2,<3",
    "jupyter_server_terminals>=0,<1",
    "jupyterlab>=4,<5",
    "jupyterlab_pygments>=0,<1",
    "jupyterlab_server>=2,<3",
    "jupyterlab_widgets>=3,<4",
    "kiwisolver>=1,<2",
    "MarkupSafe>=2,<3",
    "matplotlib>=3,<4",
    "matplotlib-inline>=0,<1",
    "mistune>=3,<4",
    "msgpack>=1,<2",
    "nbclient>=0,<1",
    "nbconvert>=7,<8",
    "nbformat>=5,<6",
    "nest_asyncio>=1,<2",
    "networkx>=3,<4",
    "numpy>1,<=2.1"
]

[project.urls]
homepage = "https://github.com/AndyCGraham/pyMethTools"

[tool.setuptools]
packages = ["pyMethTools"]